feat: Enable boostrap form validation styling for angular control states
Added SCSS to apply bootstrap form validation styling for form controls.

--- a/src/app/core/admin/messages/manage-message/manage-message.component.html
+++ b/src/app/core/admin/messages/manage-message/manage-message.component.html
@@ -21,6 +21,7 @@
 				name="type"
 				bindLabel="display"
 				bindValue="value"
+				required
 				style="width: 350px"
 				[(ngModel)]="message().type"
 				[items]="typeOptions"
