--- a/src/styles/bootstrap/_shared.scss
+++ b/src/styles/bootstrap/_shared.scss
@@ -1,7 +1,13 @@
-// Imports non-rendering bootstrap SASS (i.e. variables, functions, mixins) for easy import into other files.
+// Variable overrides must be imported before the variables are defined
+@import 'variables_overrides';
 
-@import 'variables';
+// Configuration
+@import "../../../node_modules/bootstrap/scss/functions";
+@import "../../../node_modules/bootstrap/scss/variables";
+@import "../../../node_modules/bootstrap/scss/variables-dark";
+@import "../../../node_modules/bootstrap/scss/maps";
+@import "../../../node_modules/bootstrap/scss/mixins";
+@import "../../../node_modules/bootstrap/scss/utilities";
 
-@import '../../../node_modules/bootstrap/scss/functions';
-@import '../../../node_modules/bootstrap/scss/variables';
-@import '../../../node_modules/bootstrap/scss/mixins';
+// Mixin overrides must be imported before the mixins are used.
+@import "mixins_override";
