feat: update to Angular 18

--- a/src/app/core/feedback/feedback-flyout/feedback-flyout.component.scss
+++ b/src/app/core/feedback/feedback-flyout/feedback-flyout.component.scss
@@ -10,6 +10,6 @@
 }
 
 .feedback-ready {
-	background: url('/assets/images/feedback-bg.png') no-repeat right 1rem;
+	background: url('/images/feedback-bg.png') no-repeat right 1rem;
 	background-size: 219px 129px;
 }
