--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,10 @@
 
 @import '@angular/cdk/overlay-prebuilt.css';
 
+@import "../node_modules/@fortawesome/fontawesome-free/css/all.css";
+@import "../node_modules/@fortawesome/fontawesome-free/css/v4-shims.css";
+@import "../node_modules/roboto-fontface/css/roboto/roboto-fontface.css";
+
 /* You can add global styles to this file, and also import other style files */
 
 // Import the main bootstrap style file
