--- a/src/app/core/site-navbar/site-navbar.component.html
+++ b/src/app/core/site-navbar/site-navbar.component.html
@@ -4,7 +4,7 @@
 >
 	<nav class="nav flex-column border-bottom">
 		<a class="nav-link navbar-logo p-1 border-bottom" href="#">
-			<img ngSrc="/assets/images/nav-logo.png" height="184" width="184" alt="Logo" />
+			<img ngSrc="/images/nav-logo.png" height="184" width="184" alt="Logo" />
 			<span class="nav-label">{{ appTitle() }}</span>
 		</a>
 	</nav>
